# ordabok-old

./: .drone.yml  .editorconfig  .env.example  Cargo.toml  README.org  docker-compose.yml
migrations/2023-01-03-134423_create_user/: down.sql  up.sql
migrations/2023-01-03-134426_create_language/: down.sql  up.sql
migrations/2023-01-03-134434_create_word/: down.sql  up.sql
src/: appwrite.rs  graphql.rs  main.rs  schema.rs
src/db/: mod.rs  schema.rs
src/db/models/: languages.rs  mod.rs  users.rs  words.rs
src/graphql/: context.rs  mod.rs  mutation.rs  query.rs
