[package]
name = "ordabok"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Lucien Cartier-Tilet <lucien@phundrak.com>"]
homepage = "https://labs.phundrak.com/phundrak/ordabok"
repository = "https://labs.phundrak.com/phundrak/ordabok"
readme = "README.org"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Environment variables
dotenvy = "0.15"

# Database
diesel = { version = "2.0.2", features = ["postgres", "chrono", "r2d2", "uuid"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
# DB types
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

# Web server
rocket = "0.5.0-rc.2"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "c17e814" }

# GraphQL
juniper = "0.15.10"
juniper_rocket = "0.8.2"

# logging
tracing = "0.1.37"
tracing-subscriber = "0.3.16"